<resources>
    <string name="app_name">TastyPastry</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo_description">logoImage</string>
    <string name="insert_email_description">insertEmail</string>
    <string name="enter_email_hint">Enter your email...</string>
    <string name="password_hint">Enter your password...</string>
    <string name="email_imageView">email</string>
    <string name="password_imageView">password_imageView</string>
    <string name="sign_in_button">Sign In</string>
    <string name="dont_have_an_account_text">Don\'t have an Account?</string>
    <string name="sign_up_button_to_page">Sign Up</string>
    <string name="confirm_your_password_hint">Confirm your password...</string>
    <string name="sign_up_activation">Sign Up</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="have_an_account_signin">Sign In</string>
    <string name="pastryImage">pastryImage</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="favorite_the_recipe">Favorite the recipe</string>
    <string name="share_the_recipe">Share the recipe</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="about">About</string>
    <string name="leave_feedback">Leave feedback</string>
    <string name="sign_out">Sign out</string>
    <string name="share_recipe">TODO</string>
    <string name="sampleimage">SampleImage</string>
    <string name="chocolate_cake">Chocolate Cake</string>
    <string name="tutorial">Tutorial</string>
    <string name="ingredients_title_text">Ingredients</string>
    <string name="instructions_title_text">Instructions</string>
    <string name="let_s_start">Let\'s Start!</string>
    <string name="about_tastypastry">About TastyPastry</string>
    <string name="creators">Creators</string>
    <string name="app_decription">TastyPastry is an application that provides you recipes customizable to your needs and desires-- from spices you have in your cabinet to your dietary needs. You are able to navigate through loads of pastries with just a swipe of a fingertip until you have found the golden ticket. Once that is said and done, save it to your favorites to revist later. Oh, and don\'t forget to share that recipe with your friends and family!</string>
    <string name="jorge_esquivel">Jorge Esquivel</string>
    <string name="xue_yue_fung_cj">Xue Yue Fung (CJ)</string>
    <string name="gal_foox">Gal Foox</string>
    <string name="maryia_kalodkina">Maryia Kalodkina</string>
    <string name="user">User</string>
    <string name="pic_of_gal_description">pic_of_gal</string>
    <string name="pic_maryia_description">Maryia Kalodkina</string>
    <string name="pic_of_maryia_description">pic_of_maryia_description</string>
    <string name="pic_of_cj_description">pic_of_cj_description</string>
    <string name="pic_of_jorge_description">pic_of_jorge_description</string>
    <string name="cj_fung">CJ Fung</string>
    <string name="jorge_esquival">Jorge Esquival</string>
    <string name="filter_hint">Enter a keyword...</string>
    <string name="filter_image_description">This is a magnifying glass.</string>
    <string name="delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="help">Help</string>
    <string name="enter_your_name">Enter your name...</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email...</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>
    <string name="name">Name</string>
    <string name="show_tutorial">show_tutorial</string>
    <string name="undo" />

</resources>