<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#DDD7D6"
    tools:context=".Settings">

    <TextView
        android:id="@+id/Settings_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Username_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Settings_textView" />

    <TextView
        android:id="@+id/Username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_title_textView" />

    <Button
        android:id="@+id/About_button"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginTop="70dp"
        android:text="@string/about"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#E6B7AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username_textView" />

    <Button
        android:id="@+id/Help_button"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#E6B7AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/About_button" />

    <Button
        android:id="@+id/Leave_feedback_button"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:text="@string/leave_feedback"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#E6B7AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Help_button" />

    <Button
        android:id="@+id/Sign_out_button"
        android:layout_width="290dp"
        android:layout_height="57dp"
        android:layout_marginTop="14dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:backgroundTint="#E6B7AB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Leave_feedback_button" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_gravity="bottom|center"
        android:background="#fff"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>