<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD7D6"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="35dp">

    <TextView
        android:id="@+id/Tutorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tutorial"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/SamplePastryImage"
        android:layout_width="315dp"
        android:layout_height="319dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/sampleimage"
        android:src="@drawable/sampleimage" />

    <TextView
        android:id="@+id/TutorialText1"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TutorialText2"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TutorialText3"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/letsStart"
        android:layout_width="315dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#E6B7AB"
        android:text="@string/let_s_start"
        android:textAllCaps="false"
        android:textColor="#0C0000"
        android:textSize="25sp" />

</LinearLayout>
