<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#DDD7D6">

    <TextView
        android:id="@+id/Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/help"
        android:textColor="@color/black"
        android:textSize="29sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="Contact Us"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Help" />


    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="4dp"
        android:text="Name"
        app:layout_constraintBottom_toTopOf="@+id/name_editText"
        app:layout_constraintEnd_toStartOf="@+id/contact_us"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="292dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangular_field"
        android:hint="@string/enter_your_name"
        android:paddingVertical="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/email_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="4dp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/email_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Help"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="292dp"
        android:layout_height="59dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangular_field"
        android:hint="@string/enter_your_email"
        android:paddingVertical="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/subject_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/subject_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/subject"
        app:layout_constraintBottom_toTopOf="@+id/subject_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/subject_editText"
        android:layout_width="292dp"
        android:layout_height="59dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/rectangular_field"
        android:hint="Enter subject..."
        android:paddingVertical="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/comment_section_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/comment_section_editText"
        android:layout_width="292dp"
        android:layout_height="160dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/rectangular_field"
        android:paddingVertical="15dp"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_back"
        android:text="@string/send"
        android:textColor="#0C0000"
        android:textSize="25sp"
        app:backgroundTint="#E6B7AB"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comment_section_editText"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_gravity="bottom|center"
        android:background="#fff"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>
